Initial app commit

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,22 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+  <ion-navbar color="dark">
+    <ion-buttons end>
+      <button ion-button (click)="navToScan()">
+        Add Card
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content>
+  <ion-card class="add-card" (click)="navToScan()">
+    <ion-grid>
+      <ion-row>
+        <ion-col align-self-center>
+          <ion-icon name="add" class="icon-xlarge"></ion-icon>
+          <ion-label>Add Card</ion-label>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-card>
 </ion-content>
