--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="UTF-8">
   <title>Ionic App</title>
@@ -10,7 +11,7 @@
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
-  
+
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
 
@@ -26,7 +27,8 @@
   <link href="build/main.css" rel="stylesheet">
 
 </head>
-<body>
+
+<body id="wallet">
 
   <!-- Ionic's root component and where the app will load -->
   <ion-app></ion-app>
@@ -38,4 +40,5 @@
   <script src="build/main.js"></script>
 
 </body>
+
 </html>
