--- a/src/pages/card-type-modal/card-type.html
+++ b/src/pages/card-type-modal/card-type.html
@@ -1,14 +1,14 @@
 <ion-header>
     <ion-toolbar>
-        <ion-title>
-            Select Card Type
-        </ion-title>
-        <ion-buttons start>
+        <ion-buttons>
             <button ion-button (click)="dismiss()">
                 <span ion-text color="primary" showWhen="ios">Cancel</span>
                 <ion-icon name="md-close" showWhen="android, windows"></ion-icon>
             </button>
         </ion-buttons>
+        <ion-title>
+            Select Card Type
+        </ion-title>
     </ion-toolbar>
 </ion-header>
 
