--- a/src/pages/scan/scan.html
+++ b/src/pages/scan/scan.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-toolbar>
-        <ion-buttons start>
+        <ion-buttons>
             <button ion-button (click)="cancel()">
                 <span ion-text color="primary" showWhen="ios">Cancel</span>
                 <ion-icon name="md-close" showWhen="android, windows"></ion-icon>
