Fixing a few bugs

--- a/src/pages/scan/scan.html
+++ b/src/pages/scan/scan.html
@@ -33,6 +33,6 @@
 
     <ion-item>
         <ion-label stacked>Card Number</ion-label>
-        <ion-input type="text" (input)='accountNumberChanged($event.target.value)' [(ngModel)]="card.accountNumber"></ion-input>
+        <ion-input type="text" (input)='cardNumberChanged($event.target.value)' [(ngModel)]="card.cardNumber"></ion-input>
     </ion-item>
 </ion-content>
