Tweaking the styles

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -18,8 +18,8 @@
         </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col>
-          <barcode [barcodeNumber]="card.barcode.number" class="card-barcode"></barcode>
+        <ion-col class="card-barcode">
+          <barcode [barcodeNumber]="card.barcode.number"></barcode>
         </ion-col>
       </ion-row>
     </ion-grid>
