Nav back on save

--- a/src/pages/scan/scan.html
+++ b/src/pages/scan/scan.html
@@ -10,7 +10,7 @@
         <ion-title>Scan</ion-title>
 
         <ion-buttons end>
-            <button ion-button (click)="scanBarcode()">
+            <button ion-button (click)="save()">
                 Save
             </button>
         </ion-buttons>
