Tweaking the barcode component

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -18,8 +18,8 @@
         </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col class="card-barcode">
-          <barcode [barcodeNumber]="card.barcode.number"></barcode>
+        <ion-col class="barcode-wrapper">
+          <barcode [barcodeNumber]="card.barcode.number" [height]="130" [width]="5"></barcode>
         </ion-col>
       </ion-row>
     </ion-grid>
