passing the options to the component

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -19,7 +19,7 @@
       </ion-row>
       <ion-row>
         <ion-col class="barcode-wrapper">
-          <barcode [barcodeNumber]="card.barcode.number" [height]="130" [width]="5"></barcode>
+          <barcode [barcodeNumber]="card.barcode.number" [options]="card.barcode.options"></barcode>
         </ion-col>
       </ion-row>
     </ion-grid>
