--- a/src/pages/scan/scan.html
+++ b/src/pages/scan/scan.html
@@ -26,7 +26,7 @@
         </ion-row>
         <ion-row>
             <ion-col class="barcode-wrapper">
-                <barcode [barcodeNumber]="cardNumber" [height]="315" [width]="5"></barcode>
+                <barcode [barcodeNumber]="cardNumber" [options]="barcodeOptions"></barcode>
             </ion-col>
         </ion-row>
     </ion-grid>
