Adding the app logo to the home page

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,9 @@
 <ion-header>
   <ion-navbar color="dark">
+    <img src="assets/text-logo.svg" class="app-logo" />
+
     <ion-buttons end>
-      <button ion-button (click)="navToScan()">
+      <button ion-button (click)="navToScan()">  
         Add Card
       </button>
     </ion-buttons>
