--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -7,7 +7,7 @@
             </button>
         </ion-buttons>
 
-        <ion-title>Scan</ion-title>
+        <ion-title>Edit</ion-title>
 
         <ion-buttons end>
             <button ion-button (click)="save()">
