--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -26,7 +26,7 @@
         </ion-row>
         <ion-row>
             <ion-col class="barcode-wrapper">
-                <barcode [barcodeNumber]="cardNumber" [options]="barcodeOptions"></barcode>
+                <barcode [barcodeNumber]="cardNumber" [options]="barcodeOptions" [size]="size"></barcode>
             </ion-col>
         </ion-row>
     </ion-grid>
