--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -10,7 +10,7 @@
         <ion-title>Edit</ion-title>
 
         <ion-buttons end>
-            <button ion-button (click)="save()">
+            <button ion-button (click)="save(card, cardNumber, barcodeOptions)">
                 Save
             </button>
         </ion-buttons>
