Implementing the add

--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -36,7 +36,7 @@
             <ion-col col-11>
                 <ion-item>
                     <ion-label stacked>Card Number</ion-label>
-                    <ion-input type="text" (input)='cardNumberChanged($event.target.value)' [(ngModel)]="cardNumber"></ion-input>
+                    <ion-input type="text" [(ngModel)]="cardNumber"></ion-input>
                 </ion-item>
             </ion-col>
 
