--- a/src/pages/add/add.html
+++ b/src/pages/add/add.html
@@ -10,7 +10,7 @@
         <ion-title>Add</ion-title>
 
         <ion-buttons end>
-            <button ion-button (click)="save()">
+            <button ion-button (click)="save(card, cardNumber, barcodeOptions)" [disabled]="!dataService.validCardNumber">
                 Save
             </button>
         </ion-buttons>
@@ -36,7 +36,7 @@
             <ion-col col-11>
                 <ion-item>
                     <ion-label stacked>Card Number</ion-label>
-                    <ion-input type="text" (input)='cardNumberChanged($event.target.value)' [(ngModel)]="cardNumber"></ion-input>
+                    <ion-input type="text" [(ngModel)]="cardNumber"></ion-input>
                 </ion-item>
             </ion-col>
 
