Adding a comment field

--- a/src/pages/add/add.html
+++ b/src/pages/add/add.html
@@ -10,7 +10,7 @@
         <ion-title>Add</ion-title>
 
         <ion-buttons end>
-            <button ion-button (click)="save(card, cardNumber, barcodeOptions)" [disabled]="!dataService.validCardNumber">
+            <button ion-button (click)="save(card, cardNumber, comment, barcodeOptions)" [disabled]="!dataService.validCardNumber">
                 Save
             </button>
         </ion-buttons>
@@ -42,6 +42,17 @@
 
             <ion-col col-1 align-self-end no-padding (click)="scanBarcode()">
                 <img class="barcode-icon" src="assets/scan_barcode.svg" />
+            </ion-col>
+        </ion-row>
+    </ion-grid>
+
+    <ion-grid>
+        <ion-row>
+            <ion-col>
+                <ion-item class="comment-field">
+                    <ion-label stacked>Comment</ion-label>
+                    <ion-textarea fz-elastic [(ngModel)]="comment"></ion-textarea>
+                </ion-item>
             </ion-col>
         </ion-row>
     </ion-grid>
