Change the field name from Comment to Notes

--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -51,7 +51,7 @@
         <ion-row>
             <ion-col>
                 <ion-item class="comment-field">
-                    <ion-label stacked>Comment</ion-label>
+                    <ion-label stacked>Notes</ion-label>
                     <ion-textarea fz-elastic [(ngModel)]="comment"></ion-textarea>
                 </ion-item>
             </ion-col>
