--- a/src/pages/add/add.html
+++ b/src/pages/add/add.html
@@ -50,7 +50,7 @@
         <ion-row>
             <ion-col>
                 <ion-item class="comment-field">
-                    <ion-label stacked>Comment</ion-label>
+                    <ion-label stacked>Notes</ion-label>
                     <ion-textarea fz-elastic [(ngModel)]="comment"></ion-textarea>
                 </ion-item>
             </ion-col>
