Do not hide the header on scroll

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,7 +10,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content fullscreen (ionScroll)="onScroll($event)">
+<ion-content>
 
   <img src="assets/logo.svg" class="large-app-logo" [hidden]="showCards">
 
