--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -23,7 +23,7 @@
       </ion-row>
       <ion-row>
         <ion-col class="barcode-wrapper">
-          <barcode [barcodeNumber]="card.barcode.number" [options]="card.barcode.options" [size]="size"></barcode>
+          <barcode [barcode]="card.barcode" [size]="size"></barcode>
         </ion-col>
       </ion-row>
     </ion-grid>
