Creating a card-number component

--- a/src/pages/add/add.html
+++ b/src/pages/add/add.html
@@ -31,20 +31,7 @@
         </ion-row>
     </ion-grid>
 
-    <ion-grid>
-        <ion-row>
-            <ion-col col-10>
-                <ion-item>
-                    <ion-label stacked>Card Number</ion-label>
-                    <ion-input type="text" [(ngModel)]="cardNumber"></ion-input>
-                </ion-item>
-            </ion-col>
-
-            <ion-col col-2 align-self-end no-padding (click)="scanBarcode()">
-                <img class="barcode-icon" src="assets/scan_barcode.svg" />
-            </ion-col>
-        </ion-row>
-    </ion-grid>
+    <card-number [(num)]="cardNumber" [barcodeOptions]="barcodeOptions"></card-number>
 
     <ion-grid>
         <ion-row>
