--- a/src/pages/add.custom/add.html
+++ b/src/pages/add.custom/add.html
@@ -39,20 +39,9 @@
                 <ion-input type="text" [(ngModel)]="cardName"></ion-input>
             </ion-item>
         </ion-row>
-
-        <ion-row>
-            <ion-col col-10>
-                <ion-item>
-                    <ion-label stacked>Card Number</ion-label>
-                    <ion-input type="text" [(ngModel)]="cardNumber"></ion-input>
-                </ion-item>
-            </ion-col>
-
-            <ion-col col-2 align-self-end no-padding (click)="scanBarcode()">
-                <img class="barcode-icon" src="assets/scan_barcode.svg" />
-            </ion-col>
-        </ion-row>
     </ion-grid>
+
+    <card-number [(num)]="cardNumber" [barcodeOptions]="barcodeOptions"></card-number>
 
     <ion-grid>
         <ion-row>
