--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -40,19 +40,9 @@
             </ion-item>
         </ion-row>
 
-        <ion-row>
-            <ion-col col-11>
-                <ion-item>
-                    <ion-label stacked>Card Number</ion-label>
-                    <ion-input type="text" [(ngModel)]="cardNumber"></ion-input>
-                </ion-item>
-            </ion-col>
-
-            <ion-col col-1 align-self-end no-padding (click)="scanBarcode()">
-                <img class="barcode-icon" src="assets/scan_barcode.svg" />
-            </ion-col>
-        </ion-row>
     </ion-grid>
+
+    <card-number [(num)]="cardNumber" [barcodeOptions]="barcodeOptions"></card-number>
 
     <ion-grid>
         <ion-row>
