Fixing a weird bug with the barcode options

--- a/src/pages/add.custom/add.html
+++ b/src/pages/add.custom/add.html
@@ -34,7 +34,7 @@
 
     <card-name [(name)]="cardName"></card-name>
 
-    <card-number [(num)]="cardNumber" [barcodeOptions]="barcodeOptions"></card-number>
+    <card-number [(num)]="cardNumber" [(barcodeOptions)]="barcodeOptions"></card-number>
 
     <comment [(comment)]="comment"></comment>
 
