--- a/src/pages/add/add.html
+++ b/src/pages/add/add.html
@@ -31,7 +31,7 @@
         </ion-row>
     </ion-grid>
 
-    <card-number [(num)]="cardNumber" [barcodeOptions]="barcodeOptions"></card-number>
+    <card-number [(num)]="cardNumber" [(barcodeOptions)]="barcodeOptions"></card-number>
 
     <comment [(comment)]="comment"></comment>
 
