--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -34,7 +34,7 @@
 
     <card-name [(name)]="cardName" *ngIf="card.isCustomCard"></card-name>
 
-    <card-number [(num)]="cardNumber" [barcodeOptions]="barcodeOptions"></card-number>
+    <card-number [(num)]="cardNumber" [(barcodeOptions)]="barcodeOptions"></card-number>
 
     <comment [(comment)]="comment"></comment>
 
