Consider all card numbers valid..just show warning

--- a/src/pages/add/add.html
+++ b/src/pages/add/add.html
@@ -10,7 +10,7 @@
         <ion-title>Add</ion-title>
 
         <ion-buttons end>
-            <button ion-button (click)="save(card, cardNumber, comment, barcodeOptions)" [disabled]="!dataService.validCardNumber">
+            <button ion-button (click)="save(card, cardNumber, comment, barcodeOptions)" [disabled]="!canSave()">
                 Save
             </button>
         </ion-buttons>
