Adding the card name as part of the custom template

--- a/src/pages/add.custom/add.html
+++ b/src/pages/add.custom/add.html
@@ -19,10 +19,9 @@
 
 <ion-content>
     <ion-grid class="card" [style.background]="card.background">
-
-        <ion-row>
-            <ion-col class="logo">
-                <img [src]="card.logoFullPath" />
+        <ion-row align-items-center>
+            <ion-col>
+                <ion-label class="card-name">{{cardName}}</ion-label>
             </ion-col>
         </ion-row>
         <ion-row>
