Tweaking the home screen

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -41,7 +41,7 @@
       <ion-row>
         <ion-col align-self-center>
           <ion-icon name="add" class="icon-xlarge"></ion-icon>
-          <ion-label>Add Card</ion-label>
+          <ion-label class="add-card-lbl">Add Card</ion-label>
         </ion-col>
       </ion-row>
     </ion-grid>
