--- a/src/pages/add.custom/add.html
+++ b/src/pages/add.custom/add.html
@@ -7,7 +7,7 @@
             </button>
         </ion-buttons>
 
-        <ion-title>Add</ion-title>
+        <ion-title>Card Details</ion-title>
 
         <ion-buttons end>
             <button ion-button (click)="save(card, cardNumber, comment, cardName, barcodeOptions)" [disabled]="!canSave()">
