--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -1,17 +1,17 @@
 <ion-header>
     <ion-toolbar>
         <ion-buttons>
-            <button ion-button (click)="cancel()">
+            <button ion-button (tap)="cancel()">
                 <span ion-text color="primary" showWhen="ios">Cancel</span>
                 <ion-icon name="md-close" showWhen="android, windows"></ion-icon>
             </button>
         </ion-buttons>
 
         <ion-buttons end>
-            <button ion-button (click)="delete(card)">
+            <button ion-button (tap)="delete(card)">
                 Delete
             </button>
-            <button ion-button (click)="save(card, cardNumber, comment, cardName, barcodeOptions)" [disabled]="!canSave()">
+            <button ion-button (tap)="save(card, cardNumber, comment, cardName, barcodeOptions)" [disabled]="!canSave()">
                 Save
             </button>
         </ion-buttons>
