Make the button an icon-only button

--- a/src/pages/card-type-modal/card-type.html
+++ b/src/pages/card-type-modal/card-type.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-toolbar>
         <ion-buttons>
-            <button ion-button (tap)="dismiss()">
+            <button ion-button icon-only (tap)="dismiss()">
                 <span ion-text color="primary" showWhen="ios">Cancel</span>
                 <ion-icon name="md-close" showWhen="android, windows"></ion-icon>
             </button>
