--- a/src/pages/add.custom/add.html
+++ b/src/pages/add.custom/add.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-toolbar>
         <ion-buttons>
-            <button ion-button (tap)="cancel()">
+            <button ion-button icon-only (tap)="cancel()">
                 <span ion-text color="primary" showWhen="ios">Cancel</span>
                 <ion-icon name="md-close" showWhen="android, windows"></ion-icon>
             </button>
